Support GPU service on UI thread with viz

Task-number: QTBUG-79864
Change-Id: Ia5e5856a6ef8862ceaf489df7c396334e7a5ee74
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>