chromium/components/viz/service/main/viz_main_impl.h
@@ -111,6 +111,10 @@ class VizMainImpl : public mojom::VizMain {
   // Cleanly exits the process.
   void ExitProcess(bool immediately);
 
+  VizCompositorThreadRunner* viz_compositor_thread_runner() {
+    return viz_compositor_thread_runner_;
+  }
+
  private:
   void CreateFrameSinkManagerInternal(mojom::FrameSinkManagerParamsPtr params);
 
